--- a/articles/remote-rendering/index.yml
+++ b/articles/remote-rendering/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: florianborn71
   ms.author: flborn
   ms.date: 03/26/2020
-  ms.openlocfilehash: e379515ea34206e21f80ceb23a465858d6d4da81
-  ms.sourcegitcommit: 318d1bafa70510ea6cdcfa1c3d698b843385c0f6
+  ms.openlocfilehash: 9f27118bfe3e01ce8d1cfc8c60c46c416b39c846
+  ms.sourcegitcommit: f0b206a6c6d51af096a4dc6887553d3de908abf3
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/21/2020
-  ms.locfileid: "83773213"
+  ms.lasthandoff: 05/28/2020
+  ms.locfileid: "84142123"
 landingContent:
 - title: 关于 Azure 远程渲染
   linkLists:
@@ -54,7 +54,7 @@ landingContent:
       url: quickstarts/deploy-to-desktop.md
     - text: 转换用于渲染的模型
       url: quickstarts/convert-model.md
-- title: 了解如何在 Unity 中构建自己的应用
+- title: 了解如何构建自己的应用
   linkLists:
   - linkListType: tutorial
     links:
