--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -9,14 +9,18 @@
 - name: 快速入门
   expanded: true
   items:
-    - name: 创建作业 - Azure 门户
-      href: stream-analytics-quick-create-portal.md
-    - name: 创建作业 - PowerShell
-      href: stream-analytics-quick-create-powershell.md
-    - name: 创建作业 - Visual Studio
-      href: stream-analytics-quick-create-vs.md
-    - name: 创建作业 - Visual Studio Code
-      href: quick-create-vs-code.md
+    - name: 创建作业
+      items:
+        - name: Azure 门户
+          href: stream-analytics-quick-create-portal.md
+        - name: ARM 模板
+          href: quick-create-azure-resource-manager.md
+        - name: PowerShell
+          href: stream-analytics-quick-create-powershell.md
+        - name: Visual Studio
+          href: stream-analytics-quick-create-vs.md
+        - name: Visual Studio Code
+          href: quick-create-vs-code.md
 - name: 教程
   items:
     - name: 1 - 创建/管理作业
