--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 8dd70bbe8b3e495473523a662e0501613703354f
-  ms.sourcegitcommit: 053e5e7103ab666454faf26ed51b0dfcd7661996
+  ms.openlocfilehash: 3bae82ca96497d91dab9d158fe26bed9cd8d0467
+  ms.sourcegitcommit: 1692e86772217fcd36d34914e4fb4868d145687b
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/27/2020
-  ms.locfileid: "84021766"
+  ms.lasthandoff: 05/29/2020
+  ms.locfileid: "84171185"
 highlightedContent:
   items:
   - title: Azure 开发人员入门指南
@@ -636,6 +636,12 @@ productDirectory:
     azureCategories:
     - developer-tools
     url: azure-app-configuration/index.yml
+  - title: Azure Data Studio
+    summary: 一个轻型编辑器，它可以运行按需 SQL 查询，查看结果并将其保存为文本、JSON 或 Excel 格式。
+    imageSrc: https://docs.microsoft.com/sql/tools/media/overview-sql-tools/azure-data-studio.svg
+    azureCategories:
+    - developer-tools
+    url: https://docs.microsoft.com/sql/azure-data-studio/
   - title: Azure DevOps
     summary: 供团队共享代码、跟踪工作和传输软件的服务
     imageSrc: https://static.docs.com/ui/media/product/azure/devops.svg
