--- a/articles/load-balancer/index.yml
+++ b/articles/load-balancer/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: asudbring
   ms.author: allensu
   ms.date: 05/07/2020
-  ms.openlocfilehash: 73d36c795ca4be905ac6e9bab31cfe00374bfa13
-  ms.sourcegitcommit: a6d477eb3cb9faebb15ed1bf7334ed0611c72053
+  ms.openlocfilehash: ff16b175c3ea2a323ccca3c3b2eabc5f93520079
+  ms.sourcegitcommit: 1692e86772217fcd36d34914e4fb4868d145687b
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/08/2020
-  ms.locfileid: "82930618"
+  ms.lasthandoff: 05/29/2020
+  ms.locfileid: "84170420"
 landingContent:
 - title: 关于负载均衡器
   linkLists:
@@ -90,6 +90,8 @@ landingContent:
       url: load-balancer-troubleshoot.md
     - text: 常见的 Azure 负载均衡器错误
       url: load-balancer-common-deployment-errors.md
+    - text: 解决常见的出站连接问题
+      url: troubleshoot-outbound-connection.md
 - title: 参考
   linkLists:
   - linkListType: reference
