--- a/articles/migrate/toc.yml
+++ b/articles/migrate/toc.yml
@@ -128,6 +128,8 @@
       href: how-to-migrate.md
     - name: 将 VMware VM 迁移到使用 SSE 和 CMK 加密的 Azure VM
       href: how-to-migrate-vmware-vms-with-cmk-disks.md
+    - name: 准备 Windows 2003 服务器以进行迁移
+      href: prepare-windows-server-2003-migration.md
     - name: 准备计算机以进行迁移
       href: prepare-for-migration.md
     - name: 删除 Azure Migrate 项目
