--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -310,8 +310,8 @@ groups:
     title: C#
   - id: programming-language-javascript
     title: JavaScript
-  - id: programming-language-more
-    title: 更多语言...
+  - id: programming-language-python
+    title: Python
 - id: programming-languages-set-eighteen
   title: 编程语言
   prompt: 选择编程语言
@@ -455,9 +455,9 @@ groups:
   - id: programming-language-objectivec
     title: Objective-C
 metadata:
-  ms.openlocfilehash: 3888e33063df9251d2e53322e9372d79d15b4222
-  ms.sourcegitcommit: cf7caaf1e42f1420e1491e3616cc989d504f0902
+  ms.openlocfilehash: 8fa6182b392d4be61334c15fc9e25a551f57f07b
+  ms.sourcegitcommit: 12f23307f8fedc02cd6f736121a2a9cea72e9454
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/22/2020
-  ms.locfileid: "83800452"
+  ms.lasthandoff: 05/30/2020
+  ms.locfileid: "84220256"
