commit translated contents

--- a/articles/active-directory/index.yml
+++ b/articles/active-directory/index.yml
@@ -11,13 +11,13 @@ metadata:
   author: mtillman
   ms.author: mtillman
   manager: daveba
-  ms.date: 05/19/2020
-  ms.openlocfilehash: 4e1b18e1037b37deba3e037f3e896bf1536f4fd7
-  ms.sourcegitcommit: bb0afd0df5563cc53f76a642fd8fc709e366568b
+  ms.date: 05/29/2020
+  ms.openlocfilehash: e5567804ec64fd4c1399bc3c978287ddec9817ce
+  ms.sourcegitcommit: f1132db5c8ad5a0f2193d751e341e1cd31989854
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/19/2020
-  ms.locfileid: "83591907"
+  ms.lasthandoff: 05/31/2020
+  ms.locfileid: "84233952"
 highlightedContent:
   items:
   - title: 什么是 Azure AD？
@@ -109,20 +109,6 @@ conceptualContent:
       text: 基于位置的条件
     footerLink:
       url: ./conditional-access/index.yml
-      text: 查看详细信息
-  - title: 开发人员
-    links:
-    - url: ./develop/v2-overview.md
-      itemType: overview
-      text: 关于 Microsoft 标识平台
-    - url: ./develop/v2-oauth2-auth-code-flow.md
-      itemType: concept
-      text: OAuth 2.0 代码流授权
-    - url: ./develop/quickstart-register-app.md
-      itemType: quickstart
-      text: 将应用注册到 Microsoft 标识平台
-    footerLink:
-      url: ./develop/index.yml
       text: 查看详细信息
   - title: 设备管理
     links:
@@ -235,6 +221,20 @@ conceptualContent:
       text: 支持托管标识的服务
     footerLink:
       url: ./managed-identities-azure-resources/index.yml
+      text: 查看详细信息
+  - title: Microsoft 标识平台
+    links:
+    - url: ./develop/v2-overview.md
+      itemType: overview
+      text: 关于 Microsoft 标识平台
+    - url: ./develop/v2-oauth2-auth-code-flow.md
+      itemType: concept
+      text: OAuth 2.0 代码流授权
+    - url: ./develop/quickstart-register-app.md
+      itemType: quickstart
+      text: 将应用注册到 Microsoft 标识平台
+    footerLink:
+      url: ./develop/index.yml
       text: 查看详细信息
   - title: Privileged Identity Management (PIM)
     links:
