--- a/articles/cognitive-services/form-recognizer/toc.yml
+++ b/articles/cognitive-services/form-recognizer/toc.yml
@@ -60,6 +60,8 @@
           displayName: 'docker, container, run, billing, apikey, logging'
         - name: 使用容器实例
           href: deploy-form-recognizer-on-container-instances.md
+    - name: 复制模型以用于灾难恢复
+      href: disaster-recovery.md
 - name: 参考
   items:
     - name: 表单识别器 API v2.0
