--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 3bae82ca96497d91dab9d158fe26bed9cd8d0467
-  ms.sourcegitcommit: 1692e86772217fcd36d34914e4fb4868d145687b
+  ms.openlocfilehash: 5d8dfc5c51ab6a56823a4984a7788b3cce98e7e1
+  ms.sourcegitcommit: f1132db5c8ad5a0f2193d751e341e1cd31989854
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/29/2020
-  ms.locfileid: "84171185"
+  ms.lasthandoff: 05/31/2020
+  ms.locfileid: "84230069"
 highlightedContent:
   items:
   - title: Azure 开发人员入门指南
@@ -359,12 +359,6 @@ productDirectory:
     azureCategories:
     - blockchain
     url: blockchain/service/index.yml
-  - title: Azure 区块链令牌（预览版）
-    summary: 轻松定义、创建和管理基于账本的令牌
-    imageSrc: https://static.docs.com/ui/media/product/azure/blockchain-token.svg
-    azureCategories:
-    - blockchain
-    url: blockchain/tokens/index.yml
   - title: Azure Blockchain Workbench（预览版）
     summary: 在云中轻松构建区块链应用原型
     imageSrc: https://static.docs.com/ui/media/product/azure/blockchain-workbench.svg
@@ -726,6 +720,12 @@ productDirectory:
     azureCategories:
     - devops
     url: https://docs.microsoft.com/azure/devops/test/
+  - title: 适用于 Azure 的 GitHub Actions
+    summary: 从 GitHub 中生成、测试任何应用并将其部署到 Azure
+    imageSrc: ./media/index/github-actions-icon.svg
+    azureCategories:
+    - devops
+    url: https://docs.microsoft.com/en-us/azure/developer/github/github-actions
   - title: Azure Active Directory (AD)
     summary: 同步本地目录并启用单一登录
     imageSrc: https://static.docs.com/ui/media/product/azure/active-directory.svg
