--- a/articles/key-vault/index.yml
+++ b/articles/key-vault/index.yml
@@ -13,12 +13,12 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 04/07/2020
-  ms.openlocfilehash: e445e7ad433643953e5341ec06b91dee9515c268
-  ms.sourcegitcommit: fdec8e8bdbddcce5b7a0c4ffc6842154220c8b90
+  ms.openlocfilehash: 7a0efa00b4fc881c113e151c6730ca5185ea0349
+  ms.sourcegitcommit: 1f48ad3c83467a6ffac4e23093ef288fea592eb5
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/19/2020
-  ms.locfileid: "83658655"
+  ms.lasthandoff: 05/29/2020
+  ms.locfileid: "84194437"
 highlightedContent:
   items:
   - title: Azure Key Vault 简介
@@ -67,11 +67,8 @@ conceptualContent:
       itemType: quickstart
       text: 使用 Azure 门户在 Azure Key Vault 中设置和检索密钥
     - url: ./keys/hsm-protected-keys.md
-      itemType: tutorial
-      text: 将 HSM 保护的密钥导入 Key Vault
-    - url: ./keys/hsm-protected-keys-vendor-agnostic-byok.md
       itemType: overview
-      text: 导入与供应商无关的受 HSM 保护的密钥
+      text: 导入受 HSM 保护的密钥（概述）
     footerLink:
       url: ./keys/index.yml
       text: 查看详细信息
