--- a/articles/expressroute/TOC.yml
+++ b/articles/expressroute/TOC.yml
@@ -24,28 +24,28 @@
           href: work-remotely-support.md
     - name: 连接模型
       href: expressroute-connectivity-models.md
-    - name: 线路和对等互连
-      href: expressroute-circuit-peerings.md
     - name: 位置与合作伙伴
       items:
         - name: 按位置列出的提供商
           href: expressroute-locations-providers.md
         - name: 按提供商列出的位置
           href: expressroute-locations.md
-    - name: 关于虚拟网络网关
-      href: expressroute-about-virtual-network-gateways.md
     - name: 先决条件
       href: expressroute-prerequisites.md
     - name: 工作流
       href: expressroute-workflows.md
     - name: 路由要求
       href: expressroute-routing.md
+    - name: 线路和对等互连
+      items:
+        - name: 关于线路和对等互连
+          href: expressroute-circuit-peerings.md
+        - name: 将线路从经典部署转移到 Resource Manager 部署
+          href: expressroute-move.md
     - name: 基于 ExpressRoute 的 BFD
       href: expressroute-bfd.md
     - name: QoS 要求
       href: expressroute-qos.md
-    - name: 关于将线路从经典部署移动到资源管理器部署
-      href: expressroute-move.md
     - name: 关于 ExpressRoute FastPath
       href: about-fastpath.md
     - name: 关于 ExpressRoute Direct
@@ -54,6 +54,10 @@
       href: expressroute-global-reach.md
     - name: 关于 ExpressRoute 加密
       href: expressroute-about-encryption.md
+    - name: 安全控件
+      href: expressroute-security-controls.md
+    - name: 关于虚拟网络网关
+      href: expressroute-about-virtual-network-gateways.md
     - name: 将 Azure 连接到公有云
       href: expressroute-connect-azure-to-public-cloud.md
     - name: 后端连接互操作性
@@ -68,11 +72,9 @@
           href: ../networking/connectivty-interoperability-data-plane.md?toc=%2fazure%2fexpressroute%2ftoc.json
     - name: 跨网连接
       href: cross-network-connectivity.md
-    - name: 内置安全控件
-      href: expressroute-security-controls.md
-    - name: 针对高可用性进行设计
+    - name: 高可用性 - 设计
       href: designing-for-high-availability-with-expressroute.md
-    - name: 针对灾难恢复进行设计
+    - name: 灾难恢复 - 设计
       items:
         - name: 专用对等互连
           href: designing-for-disaster-recovery-with-expressroute-privatepeering.md
@@ -165,6 +167,8 @@
           href: expressroute-monitoring-metrics-alerts.md
         - name: 为 ExpressRoute 配置网络性能监视器
           href: how-to-npm.md
+        - name: 配置自定义警报来监视播发路由
+          href: how-to-custom-route-alert.md
     - name: 经典版和旧版文章
       items:
         - name: 修改线路
