--- a/articles/key-vault/keys/index.yml
+++ b/articles/key-vault/keys/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 04/07/2020
-  ms.openlocfilehash: d5394200164d4f254ceca7a18035df95cc401747
-  ms.sourcegitcommit: b80aafd2c71d7366838811e92bd234ddbab507b6
+  ms.openlocfilehash: 580f1982478c996d5a9d0406a73df6aa200d3000
+  ms.sourcegitcommit: 1f48ad3c83467a6ffac4e23093ef288fea592eb5
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/16/2020
-  ms.locfileid: "81423354"
+  ms.lasthandoff: 05/29/2020
+  ms.locfileid: "84193644"
 landingContent:
 - title: 键
   linkLists:
@@ -40,10 +40,8 @@ landingContent:
   linkLists:
   - linkListType: tutorial
     links:
-    - text: 将 HSM 保护的密钥导入 Key Vault
+    - text: 导入受 HSM 保护的密钥（概述）
       url: hsm-protected-keys.md
-    - text: 导入与供应商无关的受 HSM 保护的密钥
-      url: hsm-protected-keys-vendor-agnostic-byok.md
 - title: 有关 Key Vault 的详细信息
   linkLists:
   - linkListType: overview
