--- a/articles/private-link/toc.yml
+++ b/articles/private-link/toc.yml
@@ -20,6 +20,8 @@
       href: create-private-link-service-powershell.md
     - name: 创建专用链接服务 - Azure CLI
       href: create-private-link-service-cli.md
+    - name: 创建专用链接服务 - ARM 模板
+      href: create-private-link-service-template.md
 - name: 概念
   items:
     - name: 专用终结点
