--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -84,6 +84,8 @@
               href: connect-syslog.md
             - name: Zimperium Mobile Threat Defense
               href: connect-zimperium-mtd.md
+            - name: 使用 Logstash
+              href: connect-logstash.md
             - name: 基于 CEF 的解决方案
               href: connect-common-event-format.md
               items:
