--- a/articles/spring-cloud/toc.yml
+++ b/articles/spring-cloud/toc.yml
@@ -90,7 +90,7 @@
 - name: 参考
   items:
     - name: Azure CLI 插件
-      href: spring-cloud-cli-reference.md
+      href: 'https://docs.microsoft.com/cli/azure/ext/spring-cloud/spring-cloud'
     - name: 资源
       href: spring-cloud-resources.md
     - name: 常见问题
