--- a/articles/cloud-services/toc.yml
+++ b/articles/cloud-services/toc.yml
@@ -190,7 +190,7 @@
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/roadmap/?category=compute'
     - name: 学习路径
-      href: 'https://azure.microsoft.com/documentation/learning-paths/cloud-services/'
+      href: /learn/paths/azure-fundamentals/
     - name: Microsoft Q&A 问题页面
       href: 'https://docs.microsoft.com/answers/topics/azure-cloud-services.html'
     - name: 定价
