--- a/articles/data-lake-store/TOC.yml
+++ b/articles/data-lake-store/TOC.yml
@@ -170,7 +170,7 @@
     - name: Python（帐户管理）
       href: 'https://docs.microsoft.com/python/api/azure-mgmt-datalake-store/azure.mgmt.datalake.store?view=azure-python'
     - name: Python（文件系统管理）
-      href: 'https://azure-datalake-store.readthedocs.io/en/latest'
+      href: /python/api/azure-mgmt-datalake-store/azure.mgmt.datalake.store
     - name: REST
       href: /rest/api/datalakestore
     - name: 资源管理器模板
