--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -454,10 +454,20 @@ groups:
     title: Python
   - id: programming-language-objectivec
     title: Objective-C
+- id: programming-languages-set-twenty
+  title: 编程语言
+  prompt: 选择编程语言
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-nodejs
+    title: Node.js
+  - id: programming-language-swift
+    title: Swift
 metadata:
-  ms.openlocfilehash: 8fa6182b392d4be61334c15fc9e25a551f57f07b
-  ms.sourcegitcommit: 12f23307f8fedc02cd6f736121a2a9cea72e9454
+  ms.openlocfilehash: ceda3e5420ca1f8743ad1d23f06e5652d9b2e4e8
+  ms.sourcegitcommit: 309cf6876d906425a0d6f72deceb9ecd231d387c
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/30/2020
-  ms.locfileid: "84220256"
+  ms.lasthandoff: 06/01/2020
+  ms.locfileid: "84266128"
