--- a/articles/data-share/TOC.yml
+++ b/articles/data-share/TOC.yml
@@ -25,7 +25,7 @@
   items:
     - name: 代码示例
       href: 'https://docs.microsoft.com/samples/browse/?service=data-share/'
-    - name: Azure Powershell
+    - name: Azure PowerShell
       href: samples-powershell.md
 - name: 操作指南
   items:
@@ -47,10 +47,12 @@
   items:
     - name: .NET
       href: /dotnet/api/overview/azure/datashare
-    - name: Azure Powershell
+    - name: Azure PowerShell
       href: 'https://docs.microsoft.com/powershell/module/az.datashare/?view=azps-2.6.0'
     - name: REST API
       href: /rest/api/datashare
+    - name: Azure CLI
+      href: azure-cli-references-for-data-share.md
 - name: 资源
   items:
     - name: Microsoft Q&A 问题页面
