commit translated contents

--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 5d8dfc5c51ab6a56823a4984a7788b3cce98e7e1
-  ms.sourcegitcommit: f1132db5c8ad5a0f2193d751e341e1cd31989854
+  ms.openlocfilehash: 4ab8f0e5a7356772f15ab6727f1712f5ff7f8cf9
+  ms.sourcegitcommit: 69156ae3c1e22cc570dda7f7234145c8226cc162
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/31/2020
-  ms.locfileid: "84230069"
+  ms.lasthandoff: 06/03/2020
+  ms.locfileid: "84308925"
 highlightedContent:
   items:
   - title: Azure 开发人员入门指南
@@ -481,7 +481,7 @@ productDirectory:
     - compute
     - containers
     url: service-fabric/index.yml
-  - title: 虚拟机上的 SQL Server
+  - title: Azure 虚拟机中的 SQL Server
     summary: 在云中托管企业 SQL Server 应用
     imageSrc: https://static.docs.com/ui/media/product/azure/sql-server-vm.svg
     azureCategories:
@@ -593,7 +593,7 @@ productDirectory:
     url: dms/index.yml
   - title: Azure SQL
     summary: 用于迁移和应用现代化的新式 SQL 系列
-    imageSrc: https://static.docs.com/ui/media/product/azure/sql-database.svg
+    imageSrc: https://static.docs.com/ui/media/product/azure/sql.svg
     azureCategories:
     - featured
     - hybrid
@@ -855,7 +855,7 @@ productDirectory:
     azureCategories:
     - iot
     url: https://docs.microsoft.com/azure-sphere/
-  - title: Azure Time Series Insights
+  - title: Azure 时序见解
     summary: 探索和分析 IoT 设备中的时序数据
     imageSrc: https://static.docs.com/ui/media/product/azure/time-series-insights-environments.svg
     azureCategories:
