--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -289,6 +289,8 @@
           href: 'https://aka.ms/am-indoor-module-websdk/'
     - name: 资源管理器模板
       href: /azure/templates/microsoft.maps/accounts
+    - name: Azure CLI
+      href: /cli/azure/maps
 - name: 资源
   items:
     - name: 支持和帮助选项
